# agentmux

./: LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/agentmux/: __init__.py  __main__.py  cli.py  config.py  models.py  question_detector.py  router.py  server.py  session_manager.py  stream_parser.py
src/agentmux/formatters/: __init__.py  plain.py  slack.py  telegram.py
src/agentmux/providers/: __init__.py  base.py  claude_code.py  codex.py  ollama.py
tests/: test_cli.py  test_config.py  test_formatters.py  test_notifications.py  test_providers.py  test_question_detector.py  test_router.py  test_server.py  test_session_manager.py  test_stream_parser.py
